--- a/oolab/src/main/resources/simulation.fxml
+++ b/oolab/src/main/resources/simulation.fxml
@@ -6,19 +6,96 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            minHeight="550.0" minWidth="850.0"
+            minHeight="800.0" minWidth="1200.0"
             fx:controller="agh.ics.oop.presenter.SimulationPresenter">
-    <top>
-        <VBox spacing="10" alignment="CENTER">
-            <TextField fx:id="moveList" promptText="Enter moves"/>
-            <Label fx:id="moveDescription" text="Move description will be displayed here" textAlignment="CENTER"/>
+    <bottom>
+        <VBox fx:id="configBox" spacing="10" alignment="CENTER">
+            <Label style="-fx-font-size: 50px;-fx-font-family: Impact">DARWIN WORLD</Label>
+            <ImageView fx:id="mainImage" fitWidth="1000" fitHeight="600" preserveRatio="true">
+                <Image url="darwin_world.jpg"></Image>
+            </ImageView>
+            <HBox spacing="10" alignment="CENTER">
+                <Label>Map width</Label>
+                <Spinner fx:id="mapWidth" editable="true" />
+                <Label>Map height</Label>
+                <Spinner fx:id="mapHeight" editable="true"/>
+                <Label>Base number of grass</Label>
+                <Spinner fx:id="baseGrassNumber" editable="true"/>
+                <Label>Daily grass growth</Label>
+                <Spinner fx:id="grassPerDay" editable="true"/>
+                <Label>Grass calory</Label>
+                <Spinner fx:id="grassCalory" editable="true"></Spinner>
+            </HBox>
+
+            <HBox spacing="10" alignment="CENTER">
+                <Label>Animal base population</Label>
+                <Spinner fx:id="basePopulation" editable="true"/>
+                <Label>Base animal energy</Label>
+                <Spinner fx:id="baseEnergy" editable="true"/>
+                <Label>Energy required to parent</Label>
+                <Spinner fx:id="readyToParent" editable="true"/>
+                <Label>Birth energy cost</Label>
+                <Spinner fx:id="childCost" editable="true"/>
+            </HBox>
+            <HBox spacing="10" alignment="CENTER">
+                <Label>Minimum mutations</Label>
+                <Spinner fx:id="minMutations" editable="true"/>
+                <Label>Maximum mutations</Label>
+                <Spinner fx:id="maxMutations" editable="true"/>
+                <Label>Genotype length</Label>
+                <Spinner fx:id="genotypeLength" editable="true"/>
+                <Label>Number of water reservoirs</Label>
+                <Spinner fx:id="numberOfReservoirs" editable="true"/>
+            </HBox>
+            <CheckBox fx:id="oldNotGold">Old not gold</CheckBox>
+            <Label fx:id="errorMessage" text="" textAlignment="CENTER"/>
             <Button text="Start" onAction="#onSimulationStartClicked"/>
 <!--            <Button text="New Simulation" onAction="#newGame"/>-->
         </VBox>
-    </top>
+    </bottom>
     <center>
-        <GridPane fx:id = "mapGrid" gridLinesVisible="true" alignment="CENTER"/>
+        <HBox spacing="10" alignment="CENTER" >
+            <VBox fx:id="statisticsBox" spacing="10" alignment="CENTER" visible="false" managed="false" style="-fx-font-size: 25px;">
+                <HBox spacing="5" alignment="CENTER_LEFT">
+                    <Label text="Animal population" />
+                    <Label fx:id="animalsLabel" text="0"/>
+                </HBox>
+                <HBox spacing="5" alignment="CENTER_LEFT">
+                    <Label text="Number of grass:" />
+                    <Label fx:id="grassLabel" text="0" />
+                </HBox>
+                <HBox spacing="5" alignment="CENTER_LEFT">
+                    <Label text="Free position number" />
+                    <Label fx:id="freePositionLabel" text="0" />
+                </HBox>
+                <HBox spacing="5" alignment="CENTER_LEFT">
+                    <Label text="Average energy:" />
+                    <Label fx:id="energyLabel" text="0" />
+                </HBox>
+                <HBox spacing="5" alignment="CENTER_LEFT">
+                    <Label text="Average lifetime:" />
+                    <Label fx:id="lifetimeLabel" text="0" />
+                </HBox>
+                <HBox spacing="5" alignment="CENTER_LEFT">
+                    <Label text="Average number of children:" />
+                    <Label fx:id="childrenLabel" text="0" />
+                </HBox>
+                <HBox spacing="5" alignment="CENTER_LEFT">
+                    <Label text="Most popular genotype:" />
+                    <Label fx:id="genotypeLabel" text="0" />
+                </HBox>
+            </VBox>
+            <GridPane fx:id = "mapGrid" gridLinesVisible="true" alignment="CENTER"/>
+        </HBox>
+
     </center>
 </BorderPane>
