--- a/oolab/src/main/resources/simulation.fxml
+++ b/oolab/src/main/resources/simulation.fxml
@@ -17,54 +17,9 @@
             xmlns:fx="http://javafx.com/fxml"
             minHeight="800.0" minWidth="1200.0"
             fx:controller="agh.ics.oop.presenter.SimulationPresenter">
-    <bottom>
-        <VBox fx:id="configBox" spacing="10" alignment="CENTER">
-            <Label style="-fx-font-size: 50px;-fx-font-family: Impact">DARWIN WORLD</Label>
-            <ImageView fx:id="mainImage" fitWidth="1000" fitHeight="600" preserveRatio="true">
-                <Image url="darwin_world.jpg"></Image>
-            </ImageView>
-            <HBox spacing="10" alignment="CENTER">
-                <Label>Map width</Label>
-                <Spinner fx:id="mapWidth" editable="true" />
-                <Label>Map height</Label>
-                <Spinner fx:id="mapHeight" editable="true"/>
-                <Label>Base number of grass</Label>
-                <Spinner fx:id="baseGrassNumber" editable="true"/>
-                <Label>Daily grass growth</Label>
-                <Spinner fx:id="grassPerDay" editable="true"/>
-                <Label>Grass calory</Label>
-                <Spinner fx:id="grassCalory" editable="true"></Spinner>
-            </HBox>
-
-            <HBox spacing="10" alignment="CENTER">
-                <Label>Animal base population</Label>
-                <Spinner fx:id="basePopulation" editable="true"/>
-                <Label>Base animal energy</Label>
-                <Spinner fx:id="baseEnergy" editable="true"/>
-                <Label>Energy required to parent</Label>
-                <Spinner fx:id="readyToParent" editable="true"/>
-                <Label>Birth energy cost</Label>
-                <Spinner fx:id="childCost" editable="true"/>
-            </HBox>
-            <HBox spacing="10" alignment="CENTER">
-                <Label>Minimum mutations</Label>
-                <Spinner fx:id="minMutations" editable="true"/>
-                <Label>Maximum mutations</Label>
-                <Spinner fx:id="maxMutations" editable="true"/>
-                <Label>Genotype length</Label>
-                <Spinner fx:id="genotypeLength" editable="true"/>
-                <Label>Number of water reservoirs</Label>
-                <Spinner fx:id="numberOfReservoirs" editable="true"/>
-            </HBox>
-            <CheckBox fx:id="oldNotGold">Old not gold</CheckBox>
-            <Label fx:id="errorMessage" text="" textAlignment="CENTER"/>
-            <Button text="Start" onAction="#onSimulationStartClicked"/>
-<!--            <Button text="New Simulation" onAction="#newGame"/>-->
-        </VBox>
-    </bottom>
     <center>
         <HBox spacing="10" alignment="CENTER" >
-            <VBox fx:id="statisticsBox" spacing="10" alignment="CENTER" visible="false" managed="false" style="-fx-font-size: 25px;">
+            <VBox fx:id="statisticsBox" spacing="10" alignment="CENTER" style="-fx-font-size: 25px;">
                 <HBox spacing="5" alignment="CENTER_LEFT">
                     <Label text="Animal population" />
                     <Label fx:id="animalsLabel" text="0"/>
@@ -96,6 +51,5 @@
             </VBox>
             <GridPane fx:id = "mapGrid" gridLinesVisible="true" alignment="CENTER"/>
         </HBox>
-
     </center>
 </BorderPane>
